<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PostActivity" >
    <item android:id="@+id/action_title"
        android:title="@string/action_title"
        android:orderInCategory="10"
        android:showAsAction="always"
        android:actionLayout="@layout/title_text"/>
    <item android:id="@+id/action_insert"
        android:title="@string/action_insert"
        android:orderInCategory="80"
        android:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/action_insert_picture"
                android:title="@string/action_insert_picture"
                android:orderInCategory="10"
                android:showAsAction="ifRoom"/>
            <item android:id="@+id/action_insert_location"
                android:title="@string/action_insert_location"
                android:orderInCategory="20"
                android:showAsAction="ifRoom"
                android:icon="@drawable/ic_action_place"/>
            <item android:id="@+id/action_insert_flickr"
                android:title="@string/action_insert_flickr"
                android:orderInCategory="30"
                android:showAsAction="ifRoom"/>
        </menu>
    </item>
    <item android:id="@+id/action_align"
          android:title="@string/action_align"
          android:orderInCategory="90"
          android:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/action_align_left"
                  android:title="@string/action_align_left"
                  android:orderInCategory="10"
                  android:showAsAction="ifRoom"/>
            <item android:id="@+id/action_align_center"
                  android:title="@string/action_align_center"
                  android:orderInCategory="20"
                  android:showAsAction="ifRoom"/>
            <item android:id="@+id/action_align_right"
                  android:title="@string/action_align_right"
                  android:orderInCategory="30"
                  android:showAsAction="ifRoom"/>
        </menu>
    </item>
    <item android:id="@+id/action_metadata"
          android:title="@string/action_metadata"
          android:orderInCategory="30"
          android:showAsAction="always"
          android:icon="@drawable/ic_action_settings"/>
    <item android:id="@+id/action_publish"
        android:title="@string/action_publish"
        android:orderInCategory="90"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_send_now"/>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_settings"/>
</menu>
