<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".PostActivity">
    <item
        android:id="@+id/action_wiki_link"
        android:title="@string/action_wiki_link"
        android:orderInCategory="20"
        android:icon="@drawable/ic_action_wikipedia_light"
        android:showAsAction="always"/>
    <item
        android:id="@+id/action_align_left"
        android:title="@string/action_align_left"
        android:orderInCategory="50"
        android:showAsAction="always"/>
    <item
        android:id="@+id/action_align_center"
        android:title="@string/action_align_center"
        android:orderInCategory="60"
        android:showAsAction="always"/>
    <item
        android:id="@+id/action_align_right"
        android:title="@string/action_align_right"
        android:orderInCategory="70"
        android:showAsAction="always"/>
</menu>