<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PostActivity" >
    <item android:id="@+id/action_title"
        android:title="@string/action_title"
        android:orderInCategory="10"
        android:showAsAction="always"
        android:actionLayout="@layout/title_text"/>
    <item android:id="@+id/action_publish"
        android:title="@string/action_publish"
        android:orderInCategory="90"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_send_now"/>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@drawable/ic_action_settings"/>
    <item android:id="@+id/action_insert"
        android:title="@string/action_insert"
        android:orderInCategory="90"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_new"/>
</menu>
